--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -52,11 +52,11 @@
       window.jQuery || document.write('<script src="/javascripts/libs/jquery-1.10.2.min.js"><\/script>')
 
     -# Holder.js - canvas-generated placeholder images for prototyping
-    = javascript_include_tag "libs/holder"
+    =# javascript_include_tag "libs/holder"
 
     = javascript_include_tag "plugins", "script"
 
-    - :javascript
+    -# :javascript
     -# (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
       -# function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
       -# e=o.createElement(i);r=o.getElementsByTagName(i)[0];
